--- a/angular.json
+++ b/angular.json
@@ -98,5 +98,8 @@
                 }
             }
         }
+    },
+    "cli": {
+      "analytics": "c4969d44-95b3-4b03-bdab-e577449eaf34"
     }
 }
