--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
-        "start:dev": "ng build  && lite-server --baseDir dist/adminpwa",
+        "start:dev": "ng serve --port 4203",
+        "start:prod": "ng build  && lite-server --baseDir dist/adminpwa",
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
         "test": "ng test"
